this should fix the clear float issue with the footer in the portal view and the accessibility related contrast failures

--- a/www/resources/css/main.css
+++ b/www/resources/css/main.css
@@ -6,7 +6,7 @@ body {
     padding:0;
     font:small/1.5em Tahoma, "Lucida Grande", sans-serif;
     voice-family: "\"}\""; voice-family:inherit;
-    color: #383d44;
+    color: #333333;
     	
 }
 
@@ -16,7 +16,6 @@ body {
 
 #content-wrapper {
 	clear: both;
-	height: 500px;
 	border-top: 1px solid #fff;
 	/*background: url(/resources/theme-zen/images/global/page_background.gif) repeat-x top left; */
 }
@@ -44,17 +43,17 @@ h3 {
 }
 	
 a:link {
-	color: #2e72b8;
+	color: #235c96;
 	text-decoration:none;
 }
 	
 a:visited {
-	color: #2e72b8;
+	color: #235c96;
 	text-decoration:none;
 }
 	
 a:hover {
-	color: #2e72b8;
+	color: #235c96;
 	text-decoration:underline;
 	background: #f3f1e9;
 }
@@ -111,11 +110,11 @@ float: left;
 
 /* LISTS -----------------------------------------------------------*/
 
-ul.compact{
+ul.compact, .action-list ul{
 	margin: 0px;
 	padding: 0px;
 }
-ul.compact li {
+ul.compact li, .action-list ul li {
 	list-style:none;
 	display: inline;
 }
@@ -216,6 +215,10 @@ a.button:hover {
 	text-decoration: underline;
 	padding-right: 5px;
 	border-right: 1px solid #666666;
+}
+
+a img {
+	border: 0px;
 }
 
 /* END OF BUTTONS */
